@@ -1969,6 +1969,7 @@ Stefan Morrow <stefanm at uniblue dot net>
 Bruce Elliot <bruce dot elliott at cox dot net>
 Mitscher Dubreus <ofup at voila dot fr>
 Brian O'Connor <brian dot oconnor at hp dot com>
+Ron Wilson <ronwilson at mac dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
