@@ -6,10 +6,9 @@
  *
  *  $Id$
  *
- *  @author David L. Levine
+ *  @author David L. Levine <levine@cs.wustl.edu>
  */
 //=============================================================================
-
 
 #ifndef ACE_MANAGED_OBJECT_H
 #define ACE_MANAGED_OBJECT_H
@@ -101,7 +100,7 @@ template <class TYPE>
 class ACE_Managed_Object
 {
 public:
-  static TYPE *get_preallocated_object (ACE_Object_Manager::Preallocated_Object id)
+  static TYPE *get_preallocated_object (ACE_Object_Manager::Preallocated_Object identifier)
   {
     // The preallocated objects are in a separate, "read-only" array so
     // that this function doesn't need a lock.  Also, because it is
@@ -111,7 +110,7 @@ public:
     // Cast the return type of the the object pointer based
     // on the type of the function template parameter.
     return &((ACE_Cleanup_Adapter<TYPE> *)
-             ACE_Object_Manager::preallocated_object[id])->object ();
+             ACE_Object_Manager::preallocated_object[identifier])->object ();
   }
   // Get the preallocated object identified by "id".  Returns a
   // pointer to the object.  Beware: no error indication is provided,
@@ -119,7 +118,7 @@ public:
   // Note: the function definition is inlined here so that it compiles
   // on AIX 4.1 w/xlC v. 3.01.
 
-  static TYPE *get_preallocated_array (ACE_Object_Manager::Preallocated_Array id)
+  static TYPE *get_preallocated_array (ACE_Object_Manager::Preallocated_Array identifier)
   {
     // The preallocated array are in a separate, "read-only" array so
     // that this function doesn't need a lock.  Also, because it is
@@ -129,7 +128,7 @@ public:
     // Cast the return type of the the object pointer based
     // on the type of the function template parameter.
     return &((ACE_Cleanup_Adapter<TYPE> *)
-             ACE_Object_Manager::preallocated_array[id])->object ();
+             ACE_Object_Manager::preallocated_array[identifier])->object ();
   }
   // Get the preallocated array identified by "id".  Returns a
   // pointer to the array.  Beware: no error indication is provided,
