@@ -100,15 +100,15 @@ ACE_Task_Base::grp_id (void) const
 // Set the current group id.
 
 ACE_INLINE void
-ACE_Task_Base::grp_id (int id)
+ACE_Task_Base::grp_id (int identifier)
 {
   ACE_TRACE ("ACE_Task_Base::grp_id");
   ACE_MT (ACE_GUARD (ACE_Thread_Mutex, ace_mon, this->lock_));
 
   // Cache the group id in the task and then set it in the
   // Thread_Manager, if there is one.
-  this->grp_id_ = id;
+  this->grp_id_ = identifier;
   if (this->thr_mgr ())
-    this->thr_mgr ()->set_grp (this, id);
+    this->thr_mgr ()->set_grp (this, identifier);
 }
 
